Hamepage, searching bar done

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,2 @@
-body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import './styles/_normalize.scss';
+// @import './styles/styles.scss;
