--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
 .App {
+  padding: 50px 75px 63px;
   text-align: center;
+  
+  @media screen and (max-width: 800px) {
+    padding: 25px 35px 30px ;
+  }
 }
