--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,5 +1,3 @@
-@import './colors.scss';
-
 * {
   position: relative;
   margin: 0;
@@ -14,7 +12,7 @@
 }
 
 body {
-  background-color: $white-primary;
+  background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
